--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "element-ui": "^2.15.2",
     "vue": "^2.6.11",
     "vue-material": "^1.0.0-beta-15",
-    "vue-router": "^3.5.1"
+    "vue-router": "^3.5.1",
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
